# SoftWar

./: .gitignore  Makefile  README.md  SoftWar  args.c  main.c  parse_arg.c  zlog.conf
client/C/: Makefile  main.c
client/Python/Affichage/: main.py
client/Python/IA/: main.py
client/RUST/: Cargo.toml
client/RUST/piston/: Cargo.toml  README.md
client/RUST/src/: main.rs
client/RUST/text/: Cargo.toml
client/RUST/text/src/: lib.rs  main.rs
client/electron/: README.md  index.html  main.js  package-lock.json  package.json  renderer.js
includes/: init.h  parse_arg.h  util.h
server/: Makefile  README.md  SoftWar  game.c  game_commands.c  init.c  json.c  main.c  server.c
server/includes/: game.h  init.h  server.h  util.h
